--- a/Ejercicio_batmobile.ipynb
+++ b/Ejercicio_batmobile.ipynb
@@ -90,6 +90,174 @@
         "id": "5KRf86H9TY82"
       },
       "source": [
+        "import numpy as np\n",
+        "import random as random\n",
+        "\n",
+        "class Batmobile:\n",
+        "  def __init__(self, pilot, jocker):\n",
+        "    if(pilot == 'Batman' or pilot == 'Robin'):\n",
+        "      self.pilot = pilot\n",
+        "    else:\n",
+        "      print('Pilot must be Batman or Robin')\n",
+        "    self.position = 0\n",
+        "    self.batrockets = 10\n",
+        "    self.pem = 3\n",
+        "    self.gas = 50\n",
+        "    if isinstance(jocker, Jocker):\n",
+        "      self.jocker = jocker\n",
+        "    else:\n",
+        "      print('Falta el jocker')\n",
+        "\n",
+        "  def acelerate(self):\n",
+        "    # De cada 3km gasta 1L de gas\n",
+        "    self.gas -= 1\n",
+        "    self.position += 1\n",
+        "    self.jocker.xposition += 1\n",
+        "\n",
+        "    print(self.jocker.xposition)\n",
+        "    print(self.position)\n",
+        "\n",
+        "  def turbo(self):\n",
+        "    self.jocker.xposition += 1\n",
+        "    self.gas -=3\n",
+        "    self.position += 3\n",
+        "\n",
+        "  def launch_rocket(self, pos):\n",
+        "    self.jocker.xposition += 1\n",
+        "    self.jocker.yposition = random.randint(0,3)\n",
+        "    #launch a rocket [x,(1,2,3)]\n",
+        "    print(self.jocker.yposition)\n",
+        "    print('you launch a rocket to pos ', pos)\n",
+        "    self.batrockets -= 1\n",
+        "\n",
+        "  def launch_pem(self): \n",
+        "    self.jocker.xposition += 1\n",
+        "\n",
+        "\n",
+        "class Jocker:\n",
+        "  def __init__(self):\n",
+        "    self.xposition = 10\n",
+        "    self.yposition =  random.randint(0,3)"
+      ],
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SsSeK4xEo9XB"
+      },
+      "source": [
+        "villano = Jocker()\n",
+        "Game = Batmobile('Batman', villano)"
+      ],
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5dozV44YpEjQ",
+        "outputId": "c3442637-24b9-463e-f2d7-199002615092",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Game.acelerate()"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "13\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dwpr3fDl39RT"
+      },
+      "source": [
+        "Game.turbo()"
+      ],
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SznMYXQLp9OT",
+        "outputId": "745bc2a8-6c7c-4022-d074-e5cf878fedb9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Game.launch_rocket(3)"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "you launch a rocket to pos  3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_ne3GyAd38vW"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xm3turlot8ir",
+        "outputId": "73097fd9-65e4-4115-db94-ef9a1967c456",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "random.randint(0,3)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJlrcHCjukjT"
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
