--- a/Ejercicio_batmobile.ipynb
+++ b/Ejercicio_batmobile.ipynb
@@ -125,9 +125,11 @@
         "  def launch_rocket(self, pos):\n",
         "    self.jocker.xposition += 1\n",
         "    self.jocker.yposition = random.randint(0,3)\n",
-        "    #launch a rocket [x,(1,2,3)]\n",
-        "    print(self.jocker.yposition)\n",
-        "    print('you launch a rocket to pos ', pos)\n",
+        "    if (self.jocker.xposition - self.position) <= 10:\n",
+        "      if (self.jocker.yposition == pos):\n",
+        "        self.jocker.kao = True\n",
+        "\n",
+        "    print('Jocker is', self.jocker.kao)\n",
         "    self.batrockets -= 1\n",
         "\n",
         "  def launch_pem(self): \n",
@@ -137,9 +139,10 @@
         "class Jocker:\n",
         "  def __init__(self):\n",
         "    self.xposition = 10\n",
-        "    self.yposition =  random.randint(0,3)"
+        "    self.yposition =  random.randint(0,3)\n",
+        "    self.kao = False"
       ],
-      "execution_count": 69,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -151,14 +154,14 @@
         "villano = Jocker()\n",
         "Game = Batmobile('Batman', villano)"
       ],
-      "execution_count": 70,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "5dozV44YpEjQ",
-        "outputId": "c3442637-24b9-463e-f2d7-199002615092",
+        "outputId": "6c882792-2432-4f39-f4e4-6881eb502a68",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -166,13 +169,13 @@
       "source": [
         "Game.acelerate()"
       ],
-      "execution_count": 73,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "13\n",
-            "5\n"
+            "15\n",
+            "9\n"
           ],
           "name": "stdout"
         }
@@ -186,28 +189,27 @@
       "source": [
         "Game.turbo()"
       ],
-      "execution_count": 72,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SznMYXQLp9OT",
-        "outputId": "745bc2a8-6c7c-4022-d074-e5cf878fedb9",
+        "outputId": "8f56b06e-443d-46f9-ca79-78e088c76a55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "Game.launch_rocket(3)"
+        "Game.launch_rocket(1)"
       ],
-      "execution_count": 77,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3\n",
-            "you launch a rocket to pos  3\n"
+            "Jocker is True\n"
           ],
           "name": "stdout"
         }
@@ -236,7 +238,7 @@
       "source": [
         "random.randint(0,3)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
