--- a/Ejercicio_batmobile.ipynb
+++ b/Ejercicio_batmobile.ipynb
@@ -87,62 +87,130 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5KRf86H9TY82"
+        "id": "DC7Ot1nip_Q0"
       },
       "source": [
         "import numpy as np\n",
         "import random as random\n",
+        "from pprint import pprint"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vI99WwuBqBxp"
+      },
+      "source": [
+        "class Rocket:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
         "\n",
+        "class PEM_Pulse:\n",
+        "  def __init__(self):\n",
+        "    pass"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5KRf86H9TY82"
+      },
+      "source": [
         "class Batmobile:\n",
-        "  def __init__(self, pilot, jocker):\n",
+        "  def __init__(self, pilot, batrocket_ammo, PEM_ammo, jocker):\n",
+        "    \n",
+        "    #init the pilot\n",
         "    if(pilot == 'Batman' or pilot == 'Robin'):\n",
-        "      self.pilot = pilot\n",
+        "      self.name = pilot\n",
         "    else:\n",
-        "      print('Pilot must be Batman or Robin')\n",
-        "    self.position = 0\n",
-        "    self.batrockets = 10\n",
-        "    self.pem = 3\n",
-        "    self.gas = 50\n",
-        "    if isinstance(jocker, Jocker):\n",
-        "      self.jocker = jocker\n",
+        "      raise Exception(\"The pilot can only be Batman or Robin\")\n",
+        "    \n",
+        "    #Get the rockets you start with\n",
+        "    for rocket in batrocket_ammo:\n",
+        "      if isinstance(rocket, Rocket):\n",
+        "        pass\n",
+        "      else:\n",
+        "        raise Exception(\"Rocket ammo failure\")\n",
+        "    self.batrocket_ammo = batrocket_ammo\n",
+        "\n",
+        "    #Get the PEM's you start with\n",
+        "    for PEM in PEM_ammo:\n",
+        "      if isinstance(PEM, PEM_Pulse):\n",
+        "        pass\n",
+        "      else: \n",
+        "        raise Exception(\"Rocket ammo failure\")\n",
+        "    self.PEM_ammo = PEM_ammo\n",
+        "\n",
+        "    #Set the liters of gas you start with\n",
+        "    self.gas_left = 20\n",
+        "\n",
+        "    #Set init position as 0, the villain has a 10 meter lead.\n",
+        "    self.pos = 0\n",
+        "\n",
+        "    if isinstance(jocker, Villain_Managger):\n",
+        "      pass\n",
         "    else:\n",
-        "      print('Falta el jocker')\n",
+        "      raise Exception(\"The villain is missing\")\n",
+        "    self.joker = joker\n",
+        "\n",
+        "    print(\"Name: \",self.name)\n",
+        "    print(\"Number of batrockets left:\", len(self.batrocket_ammo))\n",
+        "    print(\"Number of PEM left:\", len(self.PEM_ammo))\n",
+        "    print((self.joker.posx - self.pos), \"meters to reach\", self.joker.villainName)\n",
         "\n",
         "  def acelerate(self):\n",
-        "    # De cada 3km gasta 1L de gas\n",
-        "    self.gas -= 1\n",
-        "    self.position += 1\n",
-        "    self.jocker.xposition += 1\n",
+        "    #Joker advances one position\n",
+        "    self.joker.posx += 1\n",
+        "    #Go forward one meter\n",
+        "    self.pos += 1\n",
+        "    #Spend half a liter of gas\n",
+        "    self.gas_left -= 0.5\n",
         "\n",
-        "    print(self.jocker.xposition)\n",
-        "    print(self.position)\n",
+        "    print((self.joker.posx - self.pos), \"meters to reach\", self.joker.villainName)\n",
         "\n",
         "  def turbo(self):\n",
-        "    self.jocker.xposition += 1\n",
-        "    self.gas -=3\n",
-        "    self.position += 3\n",
+        "    #Joker advances one position\n",
+        "    self.joker.posx += 1\n",
+        "    #Go forward three meters\n",
+        "    self.pos += 3\n",
+        "    #Spend one and a half liters of gas\n",
+        "    self.gas_left -= 1.5\n",
+        "\n",
+        "    print((self.joker.posx - self.pos), \"meters to reach\", self.joker.villainName)\n",
         "\n",
         "  def launch_rocket(self, pos):\n",
-        "    self.jocker.xposition += 1\n",
-        "    self.jocker.yposition = random.randint(0,3)\n",
-        "    if (self.jocker.xposition - self.position) <= 10:\n",
-        "      if (self.jocker.yposition == pos):\n",
-        "        self.jocker.kao = True\n",
+        "    #Joker advances one position\n",
+        "    self.joker.posx += 1\n",
+        "    if(len(self.batrocket_ammo)>0):\n",
+        "      if (self.joker.posx - self.pos)>10:\n",
+        "        print(\"Joker is too far\")\n",
+        "      else:\n",
+        "        #The joker tries to dodge the rocket\n",
+        "        self.joker.dodge_rocket(pos)\n",
+        "      self.batrocket_ammo.pop()\n",
+        "      print(\"Number of batrockets left:\", len(self.batrocket_ammo))\n",
+        "    else:\n",
+        "      print(\"You have no rockets left\")\n",
         "\n",
-        "    print('Jocker is', self.jocker.kao)\n",
-        "    self.batrockets -= 1\n",
-        "\n",
-        "  def launch_pem(self): \n",
-        "    self.jocker.xposition += 1\n",
-        "\n",
-        "\n",
-        "class Jocker:\n",
-        "  def __init__(self):\n",
-        "    self.xposition = 10\n",
-        "    self.yposition =  random.randint(0,3)\n",
-        "    self.kao = False"
+        "  def launch_PEM(self, pos):\n",
+        "    #Joker advances one position\n",
+        "    self.joker.posx += 1\n",
+        "    if(len(self.PEM_ammo)>0):\n",
+        "      if (self.joker.posx - self.pos)>10:\n",
+        "        print(\"Joker is too far\")\n",
+        "      else:\n",
+        "        #The joker tries to dodge the rocket\n",
+        "        self.joker.dodge_PEM(pos)\n",
+        "      self.PEM_ammo.pop()\n",
+        "      print(\"Number of PEM left:\", len(self.PEM_ammo))\n",
+        "    else:\n",
+        "      print(\"You have no PEM left\")\n"
       ],
-      "execution_count": 1,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -151,31 +219,83 @@
         "id": "SsSeK4xEo9XB"
       },
       "source": [
-        "villano = Jocker()\n",
-        "Game = Batmobile('Batman', villano)"
+        "class Joker:\n",
+        "  def __init__(self):\n",
+        "    self.KO = False\n",
+        "    self.weapon = True\n",
+        "    self.position = 0\n",
+        "    self.name = \"Joker\" \n",
+        "            \n",
+        "class Joker_Villain:\n",
+        "  def __init__(self):\n",
+        "    self.KO = False\n",
+        "    self.weapon = True\n",
+        "    self.position = 0\n",
+        "    self.name = \"Joker Villain\"\n",
+        "            \n",
+        "class Villain_Managger:\n",
+        "  def __init__(self, villain):#KO, weapon, init_pos, name):\n",
+        "    if isinstance(villain, Joker):\n",
+        "      print(\"The new villain is the Joker\")\n",
+        "    elif isinstance(villain, Joker_Villain):\n",
+        "      print(\"The new villain is the Joker Villain\")\n",
+        "    else:\n",
+        "      print(\"The object of the constructor is not a Villain\")        \n",
+        "      \n",
+        "    self.KO = villain.KO\n",
+        "    self.weapon = villain.weapon\n",
+        "    self.position = villain.position\n",
+        "    self.villainName = villain.name\n",
+        "    #prueba\n",
+        "    self.posx = 10\n",
+        "        \n",
+        "  def set_lane(self):\n",
+        "    self.position = np.random.choice(10) \n",
+        "    print(\"The \", self.villainName,\" has moved to lane\", self.position)\n",
+        "    return self.position\n",
+        "    \n",
+        "  def dodge_rocket(self, pos):\n",
+        "    self.set_lane()\n",
+        "    if self.position == pos:\n",
+        "      self.KO = True\n",
+        "      print(\"The\", self.villainName,\"has been reached by the rocket, he's K.O.\")\n",
+        "    else:\n",
+        "      print(\"The\", self.villainName,\"has dodged the rocket\")\n",
+        "            \n",
+        "  def dodge_PEM(self, pos):\n",
+        "    if self.position == pos:\n",
+        "      self.weapon = False\n",
+        "      print(\"The\", self.villainName,\"has been reached by the PEM shot, he's disarmed\")\n",
+        "    else:\n",
+        "      print(\"The\", self.villainName,\"has dodged the PEM shot\")"
       ],
-      "execution_count": 2,
+      "execution_count": 74,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5dozV44YpEjQ",
-        "outputId": "6c882792-2432-4f39-f4e4-6881eb502a68",
+        "id": "_ne3GyAd38vW",
+        "outputId": "30ca5e7b-9993-4072-f3d2-6eac264ae71c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "Game.acelerate()"
+        "#Defines a list of rockets\n",
+        "list_rockets = [Rocket(), Rocket(), Rocket()]\n",
+        "#Defines a list of PEM\n",
+        "list_PEM = [PEM_Pulse(), PEM_Pulse()]\n",
+        "\n",
+        "#Defines the villain \n",
+        "joker = Villain_Managger(Joker())"
       ],
-      "execution_count": 7,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "15\n",
-            "9\n"
+            "The new villain is the Joker\n"
           ],
           "name": "stdout"
         }
@@ -184,32 +304,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dwpr3fDl39RT"
-      },
-      "source": [
-        "Game.turbo()"
-      ],
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SznMYXQLp9OT",
-        "outputId": "8f56b06e-443d-46f9-ca79-78e088c76a55",
+        "id": "KMeebjkcxu2z",
+        "outputId": "dad7c9ab-01a1-40a5-a133-33769d54d682",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "Game.launch_rocket(1)"
+        "#Create batmobil\n",
+        "batmobile = Batmobile('Batman', list_rockets, list_PEM, joker)"
       ],
-      "execution_count": 9,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Jocker is True\n"
+            "Name:  Batman\n",
+            "Number of batrockets left: 3\n",
+            "Number of PEM left: 2\n",
+            "10 meters to reach Joker\n"
           ],
           "name": "stdout"
         }
@@ -218,46 +331,78 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_ne3GyAd38vW"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Xm3turlot8ir",
-        "outputId": "73097fd9-65e4-4115-db94-ef9a1967c456",
+        "id": "SFsHTgjnyWbk",
+        "outputId": "dc39c436-a9f4-43d2-e47a-ab6246d43454",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "random.randint(0,3)"
+        "batmobile.acelerate()"
       ],
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 32
+          "output_type": "stream",
+          "text": [
+            "10 meters to reach Joker\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZJlrcHCjukjT"
+        "id": "NiFcdZVR0wE1",
+        "outputId": "3456591b-87be-4468-995e-c246c452dbce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "batmobile.turbo()"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8 meters to reach Joker\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r1jdkadV2lii",
+        "outputId": "dedddb5d-daea-4357-ae5b-41dce8c53b79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "batmobile.launch_rocket(3)"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The  Joker  has moved to lane 1\n",
+            "The Joker has dodged the rocket\n",
+            "Number of batrockets left: 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FnYDSUeC2qwj"
       },
       "source": [
         ""
